<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item android:title="@string/menu_category_katalog">
            <menu>
                <item
                    android:checkable="true"
                    android:id="@+id/nav_katalog_pria"
                    android:icon="@drawable/ic_menu_man"
                    android:title="@string/menu_katalog_pria" />
                <item
                    android:checkable="true"
                    android:id="@+id/nav_katalog_wanita"
                    android:icon="@drawable/ic_menu_woman"
                    android:title="@string/menu_katalog_wanita" />
            </menu>
        </item>
    </group>

    <group
        android:menuCategory="system"
        android:checkableBehavior="single">
        <item
            android:title="@string/menu_category_app" >
            <menu>
                <item
                    android:checkable="true"
                    android:id="@+id/nav_app_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/menu_settings"/>

                <item 
                    android:id="@+id/nav_app_logout"
                    android:checkable="false"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout"/>
            </menu>
        </item>

    </group>
</menu>